# tree-sitter-vue

./: .gitignore  Cargo.toml  build.rs
.nuvai/config/: agent-rigour.yaml
rust-src/: lib.rs
