[package]
name = "tree-sitter-vue"
description = "Vue Tree-sitter grammar"
keywords = ["incremental", "parsing", "vue", "tree-sitter"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/Nuvai/tree-sitter-vue"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
path = "rust-src/lib.rs"

[build-dependencies]
cc = "1.0"

[dependencies]
tree-sitter = "0.26"
tree-sitter-language = "0.1.5"
